Fix spacing issue with tags in Dark Rainbow theme.

--- a/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
+++ b/engineer/themes/dark_rainbow/static/stylesheets/dark_rainbow.less
@@ -419,7 +419,7 @@ ul.tags {
         display: inline-block;
         height: @line-height-default;
         line-height: @line-height-default;
-        white-space: pre;
+        //white-space: pre;
     }
 
     .link-color(@light-blue, @orange);
